--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="./images/lasagna.webp" alt="Picture of finished lasagna">
+    <img src="../images/Lasagna.png" alt="Picture of finished lasagna">
     <h2>Description</h2>
     <p> When John Chandler submitted this lasagna recipe to Allrecipes more
          than 20 years ago, he had no idea how successful it would become. 
