--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/fried_chicken.html">Fried Chicken</a></li>
+        <li><a href="./recipes/goulash.html">Goulash</a></li>
+    </ul>
 </body>
 </html>
